--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Blog - GorillaCmapping</title>
-</head>
-<body>
-  <h1>Blog Posts</h1>
-  <ul>
-    {% for post in posts %}
-      <li>
-        <a href="{{ url_for('blog_post', slug=post['slug']) }}">
-          {{ post['title'] }}
-        </a>
-        <small>Posted on {{ post['created_at'].strftime('%Y-%m-%d') }}</small>
-      </li>
-    {% else %}
-      <li>No blog posts found.</li>
-    {% endfor %}
-  </ul>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Blog - Gorilla Camping{% endblock %}
+{% block meta_description %}Discover the latest guerilla-style camping tips, gear reviews, and adventure stories on the Gorilla Camping blog.{% endblock %}
+{% block meta_keywords %}Gorilla Camping Blog, Guerilla Camping, Outdoor Adventures, Camping Tips, Gear Reviews{% endblock %}
 
+{% block content %}
+<section class="blog-section">
+    <h1>Blog Posts</h1>
+    <ul class="blog-list">
+        {% for post in posts %}
+            <li>
+                <a href="{{ url_for('blog_post', slug=post['slug']) }}">
+                    {{ post['title'] }}
+                </a>
+                <small>Posted on {{ post['created_at'].strftime('%Y-%m-%d') }}</small>
+            </li>
+        {% else %}
+            <li>No blog posts found.</li>
+        {% endfor %}
+    </ul>
+</section>
+{% endblock %}
 
