--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
       gtag('config', 'G-TE4BHZ89TL');
     </script>
     <!-- End Google Analytics -->
+    {% block extra_head %}{% endblock %}
 </head>
 <body>
     <header>
