--- a/templates/base.html
+++ b/templates/base.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{% block meta_description %}Gorilla Camping: Guerilla-style camping blog, tips, and gear picks for outdoor adventurers and hustlers.{% endblock %}">
-    <meta name="keywords" content="{% block meta_keywords %}Gorilla Camping, Guerilla Camping, Camping Blog, Outdoor Gear, Affiliate Marketing{% endblock %}">
+    <meta name="description" content="{{ self.meta_description() }}">
+    <meta name="keywords" content="{{ self.meta_keywords() }}">
     <meta name="author" content="Your Name">
     <title>{% block title %}Gorilla Camping{% endblock %}</title>
     <link rel="stylesheet" href="/static/css/styles.css">
 
     <!-- Favicon and social meta tags -->
     <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="{{ self.title() }}">
+    <meta property="og:description" content="{{ self.meta_description() }}">
     <meta property="og:image" content="https://gorillacamping.site/static/images/og-image.jpg">
     <meta name="twitter:card" content="summary_large_image">
-    {% block extra_head %}{% endblock %}
     <meta name="twitter:title" content="{{ self.title() }}">
-    <meta name="twitter:description" content="{% block meta_description %}Gorilla Camping: Guerilla-style camping blog, tips, and gear picks for outdoor adventurers and hustlers.{% endblock %}">
+    <meta name="twitter:description" content="{{ self.meta_description() }}">
     <meta name="twitter:image" content="https://gorillacamping.site/static/images/og-image.jpg">
+
+    {% block extra_head %}{% endblock %}
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TE4BHZ89TL"></script>
