--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="{{ self.meta_keywords() }}">
     <meta name="author" content="Your Name">
     <title>{% block title %}Gorilla Camping{% endblock %}</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 
     <!-- Favicon and social meta tags -->
     <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon">
