--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,14 @@
       gtag('config', 'G-TE4BHZ89TL');
     </script>
     <!-- End Google Analytics -->
+    <!-- Microsoft Clarity Analytics -->
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rprq55166f");
+</script>
 </head>
 <body>
     <header>
